# homectl-server

./: .dockerignore  .editorconfig  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  Settings.toml  Settings.toml.example  default.nix  docker-compose.yml  renovate.json  result  rust-toolchain  rust-toolchain.toml  sqlx-data.json  start-backend.sh  start-frontend.sh
.github/workflows/: ci.yml  docker-image.yml  release-please.yaml
.sqlx/: query-161d6c663b9aaf9b85a5f71fa7f957dc82c5e646664c744af4c7a8cbcfb0e4e7.json  query-1c07e36cce8393853144087e2f05432fbcb010aa6b6abab6a1d05dd7b0a8b25c.json  query-28469b7e62d38c384849c27a91eb7c9c758afb509a4feb5bac320bcf1c394b2e.json  query-2a7000296aab625f3aaedb75f2e1a2604186926387768e26b6c6f6cf7d34489c.json  query-59210ea5a994a8ba2d6019a82c700e321b35f5c5f06779fc08148c21a86e15c4.json  query-6904098a9bcbcd52c55db6af8fa62f02201ddd373ab20480311484205ba15220.json  query-6fdddbc555e2b9b739b8a76f56a18b5e27e2ca4f908113c98d253d76d09150d1.json  query-84f33c5baf0dc08016dfbd51b80fcc471ab44768996d85f986cc8ef0f1b69543.json  query-878b76d50a28cbd6ce1cb6fecc837a14cc946681e431ff4e4d41ab2c77cede0e.json  query-ab41eb9fb5becbf478c3836ad2040ed8941c847adc9c03d633be41f0934aaa48.json  query-d046a95e04e81bd564288cb354674fbad7017dcdcc8c882b85358cd43e85d0b9.json  query-d5852ad31712142776bc6c6056c64341fd345eb9559bad55f71bb1523910da35.json  query-e0a98dac18cf26b97b7338b37e525d4b745e2ee5a2ccfef7c0120f490d07925e.json
backend/: .gitignore  Cargo.toml  Dockerfile.migrations  Settings.toml.example  docker-compose.yml  sqlx-data.json
backend/migrations/: 20220122114506_init.sql  20220122170432_integration_neato.sql  20220131200137_scenes.sql
backend/migrations/2020-04-25-093555_floorplans/: up.sql
backend/migrations/2020-04-25-095531_floorplan_devices/: down.sql  up.sql
backend/migrations/2020-12-06-120108_scenes/: down.sql
backend/src/: main.rs
backend/src/api/: devices.rs  mod.rs  ws.rs
backend/src/db/: actions.rs  mod.rs  schema.rs
backend/src/db/entities/: devices.rs  integration_neato.rs  mod.rs  prelude.rs
backend/src/homectl_core/: config.rs  devices.rs  groups.rs  integrations.rs  message.rs  mod.rs  rules.rs  scenes.rs  state.rs  websockets.rs
backend/src/integrations/: mod.rs
backend/src/integrations/boolean/: mod.rs
backend/src/integrations/circadian/: mod.rs
backend/src/integrations/dummy/: mod.rs
backend/src/integrations/hue/: bridge.rs  light_utils.rs  lights.rs  mod.rs  sensor_utils.rs  sensors.rs
backend/src/integrations/lifx/: mod.rs  utils.rs
backend/src/integrations/neato/: api.rs  mod.rs
backend/src/integrations/ping/: mod.rs
backend/src/integrations/random/: mod.rs
backend/src/integrations/timer/: mod.rs
backend/src/integrations/tuya/: mod.rs  utils.rs
backend/src/integrations/tuya_polling/: mod.rs
backend/src/integrations/wake_on_lan/: mod.rs
bindings/: Action.ts  Capabilities.ts  CorrelatedColorTemperature.ts  Ct.ts  CustomActionDescriptor.ts  Device.ts  DeviceColor.ts  DeviceData.ts  DeviceKey.ts  DevicesState.ts  FlattenedSceneConfig.ts  Hs.ts  IntegrationActionPayload.ts  ManagedDevice.ts  ManagedDeviceState.ts  Rgb.ts  SceneDescriptor.ts  SceneDeviceState.ts  SceneDeviceStates.ts  SceneGroupsConfig.ts  SensorDevice.ts  SensorKind.ts  SupportedColorModes.ts  WebSocketRequest.ts  Xy.ts
console/: Cargo.toml
console/src/: log.rs
docs/: event.md  integrations.md  message.md
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  manifest.webmanifest  package-lock.json  package.json  service-worker.js  tailwind.config.js
frontend/src/: app_state.rs  color_swatch.rs  dashboard.rs  device_list.rs  device_modal.rs  edit_scene_modal.rs  group_device_list.rs  group_list.rs  header.rs  main.rs  modal.rs  redirect.rs  save_scene_modal.rs  scene_list.rs  tile.rs  util.rs
homectl-server/: Cargo.toml
homectl-server/migrations/: 20220131200137_scenes.sql
homectl-server/src/api/: actions.rs  devices.rs  ws.rs
homectl-server/src/homectl_core/: config.rs  devices.rs  integrations.rs  message.rs  rules.rs  scenes.rs  state-downstairs-on-upstairs-off.json  state.rs  websockets.rs
homectl-server/src/integrations/boolean/: mod.rs
homectl-server/src/integrations/circadian/: mod.rs
homectl-server/src/integrations/dummy/: mod.rs
homectl-server/src/integrations/hue/: bridge.rs  light_utils.rs  lights.rs  mod.rs  sensor_utils.rs
homectl-server/src/integrations/lifx/: lights.rs  mod.rs  utils.rs
homectl-server/src/integrations/mqtt/: mod.rs  utils.rs
homectl-server/src/integrations/neato/: api.rs  mod.rs
homectl-server/src/integrations/ping/: mod.rs
homectl-server/src/integrations/random/: mod.rs
homectl-server/src/integrations/timer/: mod.rs
homectl-server/src/integrations/tuya/: mod.rs  utils.rs
homectl-server/src/integrations/wake_on_lan/: mod.rs
migrations/: 20220122114506_init.sql  20230602051731_drop_device_scene_id.sql  20250218124706_ui_state.sql  20250225090729_scene_overrides.sql
migrations/2020-04-25-093555_floorplans/: down.sql
migrations/2020-04-25-094734_devices/: down.sql  up.sql
migrations/2020-12-06-120108_scenes/: up.sql
script/: build_aarch64-unknown-linux-gnu_bullseye.sh  fmt.sh  run.sh  test.sh
src/: db.rs  main.rs
src/api/: actions.rs  devices.rs  mod.rs  ws.rs
src/core/: config.rs  device.rs  devices.rs  event.rs  expr.rs  groups.rs  integration.rs  integrations.rs  message.rs  mod.rs  routines.rs  rules.rs  scenes.rs  state.rs  ui.rs  websockets.rs
src/db/: actions.rs  mod.rs  models.rs  schema.rs
types/: Cargo.toml  LICENSE  README.md
types/bindings/: Device.ts  DeviceId.ts  DeviceKey.ts  DeviceState.ts  FlattenedGroupConfig.ts  GroupId.ts  IntegrationActionDescriptor.ts  IntegrationId.ts  Message.ts  MultiSourceLight.ts  SceneConfig.ts  SceneDeviceConfig.ts  SceneDeviceLink.ts  SceneDevicesSearchConfig.ts  SceneId.ts  SensorKind.ts
types/src/: action.rs  custom_integration.rs  device.rs  event.rs  group.rs  integration.rs  lib.rs  polling_integration.rs  rule.rs  scene.rs  utils.rs  websockets.rs
(+72 files in other folders)
