[package]
name = "homectl-server"
version = "0.9.5"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2021"
default-run = "homectl-server"

[[bin]]
name = "homectl-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "=1.5.0"
bytes = "=1.8.0"
chrono = { version = "=0.4.38", features = ["serde"] }
config = "=0.14.0"
futures = "=0.3.31"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.132"
palette = { version = "=0.7.6", features = ["serializing"] }
async-trait = "=0.1.83"
rand = "=0.8.5"
warp = "=0.3.7"
serde_path_to_error = "=0.1.16"
tokio = { version = "=1.40.0", features = ["full"] }
futures-util = "=0.3.31"
tokio-stream = "=0.1.16"
itertools = "=0.13.0"
sqlx = { version = "=0.8.2", features = [
	"runtime-tokio-rustls",
	"postgres",
	"json",
] }
once_cell = "=1.20.2"
rumqttc = "=0.24.0"
toml = "=0.8.19"
ts-rs = { version = "=10.0.0", features = ["ordered-float-impl", "no-serde-warnings"] }
macro-attr = "=0.2.0"
newtype_derive = "=0.1.6"
log = "=0.4.22"
pretty_env_logger = "=0.5.0"
eyre = "=0.6.12"
color-eyre = "=0.6.3"
croner = "=2.0.6"
evalexpr = { git = "https://github.com/FruitieX/evalexpr", branch = "rasmus/type-unsafe-context", features = [
	"serde_support",
	"rand",
] }
ordered-float = { version = "=4.4.0", features = ["serde"] }
jsonptr = "=0.6.3"
serde_json_path = "=0.6.7"
serde-this-or-that = "=0.4.2"
