[package]
name = "homectl-server"
homepage = "https://github.com/FruitieX/homectl-server"
license = "MIT"
description = "A simple home automation server written in Rust"
version = "0.9.5"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2021"
default-run = "homectl-server"

[[bin]]
name = "homectl-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "=1.5.0"
bytes = "=1.10.1"
chrono = { version = "=0.4.41", features = ["serde"] }
config = "=0.15.13"
futures = "=0.3.31"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.141"
palette = { version = "=0.7.6", features = ["serializing"] }
async-trait = "=0.1.88"
rand = "=0.8.5"
warp = "=0.3.7"
serde_path_to_error = "=0.1.17"
tokio = { version = "=1.46.1", features = ["full"] }
futures-util = "=0.3.31"
tokio-stream = "=0.1.17"
itertools = "=0.14.0"
sqlx = { version = "=0.8.6", features = [
	"runtime-tokio-rustls",
	"postgres",
	"json",
] }
once_cell = "=1.21.3"
rumqttc = "=0.24.0"
toml = "=0.9.2"
ts-rs = { version = "=11.0.1", features = ["ordered-float-impl", "no-serde-warnings", "serde-json-impl"] }
macro-attr = "=0.2.0"
newtype_derive = "=0.1.6"
log = "=0.4.27"
pretty_env_logger = "=0.5.0"
eyre = "=0.6.12"
color-eyre = "=0.6.5"
croner = "=2.2.0"
evalexpr = { git = "https://github.com/FruitieX/evalexpr", branch = "rasmus/type-unsafe-context", features = [
	"serde_support",
	"rand",
] }
ordered-float = { version = "=5.0.0", features = ["serde"] }
jsonptr = "=0.7.1"
serde_json_path = "=0.7.2"
serde-this-or-that = "=0.5.0"
clap = { version = "=4.5.41", features = ["derive"] }
