[package]
name = "homectl"
version = "0.1.0"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bytes = "0.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.10.1"
futures = "0.3.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
hmac = "0.10.1"
sha2 = "0.9.2"
hex = "0.4.2"
palette = { version = "0.5.0", features = ["serializing"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
async-trait = "0.1.42"
surf = "2.1.0"
rand = "0.7.3"
num-traits = "0.2.14"
async-std = { version = "1.7.0", features = ["attributes", "unstable"] }
anyhow = "1.0.34"
lazy_static = "1.4.0"
wakey = "0.1.2"
warp = "0.3"
serde_path_to_error = "0.1"
homectl_types = { path = "../types" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.19"
tokio-stream = "0.1.8"
rust-tuyapi = { git = "https://github.com/FruitieX/rust-tuyapi" }
env_logger = "0.9.0"