[package]
name = "homectl-ui"
version = "0.1.0"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.53"
homectl_types = { path = "../types" }
homectl_console = { path = "../console" }
js-sys = "0.3.55"
web-sys = "0.3.55"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
reqwasm = "0.4.0"
futures = "0.3.8"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web"] }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus" }
fermi = { git = "https://github.com/dioxuslabs/fermi" }
dioxus-websocket-hooks = { git = "https://github.com/FruitieX/dioxus-websocket-hooks" }
palette = { version = "0.5.0", features = ["serializing"] }