[package]
name = "homectl-server"
version = "0.1.1"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2021"
default-run = "homectl-server"

[[bin]]
name = "homectl-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bytes = "0.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.10.1"
futures = "0.3.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
hmac = "0.10.1"
sha2 = "0.9.2"
hex = "0.4.2"
palette = { version = "0.5.0", features = ["serializing"] }
async-trait = "0.1.42"
surf = "2.1.0"
rand = "0.7.3"
anyhow = "1.0.53"
wakey = "0.1.2"
warp = "0.3"
serde_path_to_error = "0.1"
homectl_types = { path = "../types", features = ["backend"] }
tokio = { version = "1", features = ["rt", "net", "time", "macros", "sync"] }
futures-util = "0.3.19"
tokio-stream = "0.1.8"
# rust-async-tuyapi = "0.8.1"
rust-async-tuyapi = { git = "https://github.com/FruitieX/rust-async-tuyapi", rev = "76718a40abd86c939d5f0fdb74229a405a8bf4e7" }
env_logger = "0.9.0"
itertools = "0.10.3"
sqlx = { version = "0.6", features = [
	"runtime-tokio-rustls",
	"postgres",
	"json",
	"offline",
] }
once_cell = "1.9.0"
rumqttc = "0.20.0"
toml = "0.5.10"
json_value_merge = "1.1.2"
