[package]
name = "homectl_types"
version = "0.1.0"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2018"

[dependencies]
newtype_derive = "0.1.6"
macro-attr = "0.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
palette = { version = "0.5.0", features = ["serializing"] }
async-trait = "0.1.42"
config = "0.10.1"
anyhow = "1.0.53"
once_cell = "1.9.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ], optional = true }
tokio = { version = "1", features = ["sync"] }

[features]
backend = ["sqlx"]