[package]
name = "homectl_types"
version = "0.1.0"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
newtype_derive = "0.1.6"
macro-attr = "0.2.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
palette = { version = "0.7.1", features = ["serializing"] }
async-trait = "0.1.68"
config = "0.13.3"
anyhow = "1.0.71"
once_cell = "1.17.1"
sqlx = { version = "0.6", features = [
	"runtime-tokio-rustls",
	"postgres",
], optional = true }
tokio = { version = "1", features = ["sync"] }
ts-rs = "6.2"

[features]
backend = ["sqlx"]
